error css arreglado + dibuja butacas libres

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,10 +26,10 @@ body {
 	background-color: #1dcb1a;
 }
 
-.butacaLibre {
+.butacaSeleccionada {
 	background-color: #f36608;
 }
 
-.butacaLibre {
+.butacaOcupada {
 	background-color: #de0000;
 }
